assets/css/style.css
body {
    font-family: 'Lato', sans-serif;
    padding-top: 50px;
}

h3, h2, .nav-btn, .num-display, .back-to-top-link  {
    font-family: 'Montserrat' , sans-serif;
    font-weight: 400;
}

h5, nav a {
  padding-top: 20px;  
  font-family: 'Montserrat' , sans-serif;
  font-weight: 400;
}

.link-style {
    color: #0666f9;
}

.link-style:hover {
  color: #84A5B8;  
  text-decoration: none;
  transition:all 0.25s ease-in-out;
    -moz-transition:all 0.25s ease-in-out;
    -webkit-transition:all 0.25s ease-in-out;
    -o-transition:all 0.25s ease-in-out;
}

.dc-chart g.row text {
    fill: black;
}

/*--------------------------------- Main Navigation*/
nav {
    height: 50px;
    background-color: rgba(45, 48, 57, 0.8);
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 1;
}

.logo-container {
    padding-top:10px;
    margin-left: 10px;
    display: inline-block;
    font-size: 1.2em;
}

.logo {
    color: #EEEEEE;
}

.logo:hover {
  color: #84A5B8;  
  text-decoration: none;
  transition:all 0.25s ease-in-out;
    -moz-transition:all 0.25s ease-in-out;
    -webkit-transition:all 0.25s ease-in-out;
    -o-transition:all 0.25s ease-in-out;
}

.nav-buttons {
    float: right;
    padding-top: 10px;
    margin-right: 30px;
}

.nav-btn {
    color: #113B92;
    background-color: #EEEEEE;
    border-radius: 5px;
    box-shadow: 4px 4px 1px 0px rgba(0,0,0,0.80);
    width: 100px;
}

.help-btn {
    margin-right: 30px;
}

.nav-btn:hover {
    color: #EEEEEE;
    background-color: #113B92;
    transition:all 0.25s ease-in-out;
    -moz-transition:all 0.25s ease-in-out;
    -webkit-transition:all 0.25s ease-in-out;
    -o-transition:all 0.25s ease-in-out;
}

nav img {
    margin-right: 10px;
}


/*--------------------------------- Help -click to pop up*/

.help-modal {
  display: none; 
  position: fixed; 
  z-index: 1; 
  text-align: center;
  left: 0;
  top: 0;
  width: 100%; 
  height: 100%; 
  overflow: auto; 
  background-color: rgb(0,0,0); 
  background-color: rgba(0,0,0,0.6); 
}

.help-content {
  margin: 10% auto; 
  padding: 20px;
  position: relative;
  width: 80%; 
  animation-name: animatetop;
  animation-duration: 0.4s
}

.help_close {
  color: #2D3039;
  position: absolute;
  top: 0px;
  left: 95%;
  font-size: 2.5em;
  padding-top: 10px;
}

.help-header {
  margin-top: 10px;
  padding-bottom: 10px;
  color: #2D3039;
}

.help-body {
    padding: 5px 16px;
}

.help_close:hover,
.help_close:focus {
  color: #CBCBCB;
  cursor: pointer;
  transition:all 0.100 ease-in-out;
    -moz-transition:all 0.100 ease-in-out;
    -webkit-transition:all 0.100 ease-in-out;
    -o-transition:all 0.100 ease-in-out;
}

@keyframes animatetop {
  from {top: -300px; opacity: 0}
  to {top: 0; opacity: 1}
}

hr {
    background-color: #EEEEEE;
    max-width: 80%;
}
/*--------------------------------- Header*/

.img-fluid {
    max-width: 100%;
    height: auto;
}

/*--------------------------------- Intro section*/
.intro {
    padding: 10px;
    margin-top: 50px;
    margin-bottom: 50px;
}

.intro-header {
    margin-bottom: 20px;
    margin-top: 15px;
}


/*--------------------------------- General chart sections styling*/

.section-spacing {
    margin-bottom: 50px;
}

.card-styling {
    background-color: #EEEEEE;
    box-shadow: 10px 10px 4px 0px rgba(0,0,0,0.50);
}

.chart-title {
    padding-top:25px;
    padding-bottom: 10px;
}

.chart-intro{
    padding: 10px 40px 30px;
}

.chart-info{
    padding: 45px 40px 20px;
}


/*--------------------------------- Top section stats -number displays and pie and donut section*/

.top-stats, .pie-donut-section  {
    margin-right: 35px;
    margin-left: 35px;
    margin-bottom: 50px;
}

.top-stats p {
    padding-top: 10px;
    padding-bottom: 5px;
}

.num-display {
    font-size: 3em;
    color: #0a5de0;
    padding-top: 20px;
    padding-bottom: 25px;
}

.top-stats-icon {
    padding-right: 50px;
    font-size: 1.2em;
    color: #0a5de0;
}

.pie-info {
    padding: 25px 20px 5px;
}

/*--------------------------------- Bar charts of incidents per area */

.incidents_per_area_style .axis.x text {
    -webkit-transform: rotate(-45deg);
          transform: rotate(-45deg);
  text-anchor: end !important;
  font-size: 0.7rem;
}

/*--------------------------------- Back to top link*/

.back-to-top-link {
    margin-top: 50px;
    text-align: center;
}

.back-to-top-link a {
    color: rgb(45, 48, 57);
}

.back-to-top-link a:hover {
  color: #84A5B8;  
  text-decoration: none;
  transition:all 0.25s ease-in-out;
    -moz-transition:all 0.25s ease-in-out;
    -webkit-transition:all 0.25s ease-in-out;
    -o-transition:all 0.25s ease-in-out;
}

/*--------------------------------- Footer*/

footer {
    background-color: rgba(45, 48, 57, 0.8);
    height: 50px;
    margin-top: 50px;
    text-align: center;
    position: relative;
}

.github-link {
    color: #EEEEEE;
    padding-top: 10px;
    display: inline-block;
}

.github-link a i {
    font-size: 32px;
    color: #EEEEEE;
}

.github-link a i:hover {
    color: #84A5B8;
    transition:all 0.25s ease-in-out;
      -moz-transition:all 0.25s ease-in-out;
      -webkit-transition:all 0.25s ease-in-out;
      -o-transition:all 0.25s ease-in-out;
}

.disclaimer {
    color: #EEEEEE;
    position: absolute;
    padding-top: 10px;
    padding-left: 10px;
}

/*--------------------------------- Media queries*/

@media (max-width:767px){
    .title-header {
        display: none;
    }
    .nav-btn {
        width: 70px;
    }
}

@media (max-width:1025px){
    .disclaimer {
        display: none;
    }
    .chart-intro{
    padding: 10px 15px 20px;
    }
   .chart-info{
    padding: 35px 15px 20px;
    }
    .top-stats {
        margin-left: 25px;
        margin-right: 25px;
    }
   
}

